--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,25 @@
-# Prerequisites
-*.d
+# vscode files
+.vscode/
+
+# Build directories
+build/
+Build/
+out/
+bin/
+out/build/
+cmake-build-*/
+
+# CMake generated files
+CMakeCache.txt
+CMakeFiles/
+CMakeScripts/
+Testing/
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps/
 
 # Compiled Object files
 *.slo
@@ -10,12 +30,6 @@
 # Precompiled Headers
 *.gch
 *.pch
-
-# Linker files
-*.ilk
-
-# Debugger Files
-*.pdb
 
 # Compiled Dynamic libraries
 *.so
@@ -37,5 +51,78 @@
 *.out
 *.app
 
-# debug information files
-*.dwo
+# Debug files
+*.dSYM/
+*.su
+*.idb
+*.pdb
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# IDE specific files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Eclipse
+.cproject
+.project
+.settings/
+
+# Xcode
+*.xcuserstate
+*.xccheckout
+*.moved-aside
+DerivedData/
+*.hmap
+*.ipa
+
+# Visual Studio
+*.sln
+*.vcxproj
+*.vcxproj.filters
+*.vcxproj.user
+
+# CLion
+.clion/
+
+# Qt Creator
+*.pro.user
+*.qbs.user
+
+# Temporary files
+*.tmp
+*.temp
+*.log
+
+# Package files
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
+# Network packet files (if not part of source)
+*.pcap
+*.pcapng
+*.cap
+
+# Output files
+output.csv
+*.out
+*.txt
+
+# Exception: Don't ignore CMakeLists.txt
+!CMakeLists.txt
